--- a/mocha.css
+++ b/mocha.css
@@ -1,9 +1,11 @@
-/* version: 2.2.5 */
-/* See BSAC markers for changes due to dark color scheme. */
+/*  "version": "2.3.4", */
 @charset "utf-8";
 
 body {
   margin:0;
+}
+
+body.mocha-dark {
   background: black; /* BSAC */
   color: yellow; /* BSAC */
 }
@@ -86,7 +88,10 @@ body {
   display: block;
   float: left;
   margin-right: 5px;
-  /* color: #00d6b2; BSAC */
+  color: #00d6b2;
+}
+
+.mocha-dark #mocha .test.pass::before {
   color: green; /* BSAC */
 }
 
@@ -94,8 +99,7 @@ body {
   font-size: 9px;
   margin-left: 5px;
   padding: 2px 5px;
-  /* color: #fff; BSAC */
-  color: purple; /* BSAC */
+  color: #fff;
   -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.2);
   -moz-box-shadow: inset 0 1px 1px rgba(0,0,0,.2);
   box-shadow: inset 0 1px 1px rgba(0,0,0,.2);
@@ -106,28 +110,44 @@ body {
   border-radius: 5px;
 }
 
+.mocha-dark #mocha .test.pass .duration {
+  color: purple; /* BSAC */
+}
+
 #mocha .test.pass.fast .duration {
   display: none;
 }
 
 #mocha .test.pending {
-  /* color: #0b97c4; BSAC */
+  color: #0b97c4;
+}
+
+.mocha-dark #mocha .test.pending {
   color: cyan; /* BSAC */
 }
 
 #mocha .test.pending::before {
   content: '◦';
-  /* color: #0b97c4; BSAC */
+  color: #0b97c4;
+}
+
+.mocha-dark #mocha .test.pending::before {
   color: cyan; /* BSAC */
 }
 
 #mocha .test.fail {
-  /* color: #c00; BSAC */
+  color: #c00;
+}
+
+.mocha-dark #mocha .test.fail {
   color: red; /* BSAC */
 }
 
 #mocha .test.fail pre {
-  /* color: black; BSAC */
+  color: black;
+}
+
+.mocha-dark #mocha .test.fail pre {
   color: red; /* BSAC */
 }
 
@@ -137,15 +157,60 @@ body {
   display: block;
   float: left;
   margin-right: 5px;
-  /* color: #c00; BSAC */
+  color: #c00;
+}
+
+.mocha-dark #mocha .test.fail::before {
   color: red; /* BSAC */
 }
 
 #mocha .test pre.error {
-  /* color: #c00; BSAC */
-  color: red; /* BSAC */
+  color: #c00;
   max-height: 300px;
   overflow: auto;
+}
+
+.mocha-dark #mocha .test pre.error {
+  color: red; /* BSAC */
+}
+
+#mocha .test .html-error {
+  overflow: auto;
+  color: black;
+  line-height: 1.5;
+  display: block;
+  float: left;
+  clear: left;
+  font: 12px/1.5 monaco, monospace;
+  margin: 5px;
+  padding: 15px;
+  border: 1px solid #eee;
+  max-width: 85%; /*(1)*/
+  max-width: calc(100% - 42px); /*(2)*/
+  max-height: 300px;
+  word-wrap: break-word;
+  border-bottom-color: #ddd;
+  -webkit-border-radius: 3px;
+  -webkit-box-shadow: 0 1px 3px #eee;
+  -moz-border-radius: 3px;
+  -moz-box-shadow: 0 1px 3px #eee;
+  border-radius: 3px;
+}
+
+.mocha-dark #mocha .test .html-error {
+  color: red; /* BSAC */
+}
+
+#mocha .test .html-error pre.error {
+  border: none;
+  -webkit-border-radius: none;
+  -webkit-box-shadow: none;
+  -moz-border-radius: none;
+  -moz-box-shadow: none;
+  padding: 0;
+  margin: 0;
+  margin-top: 18px;
+  max-height: none;
 }
 
 /**
@@ -219,11 +284,14 @@ body {
 }
 
 #mocha-error {
-  /* color: #c00; BSAC */
-  color: red; /* BSAC */
+  color: #c00;
   font-size: 1.5em;
   font-weight: 100;
   letter-spacing: 1px;
+}
+
+.mocha-dark #mocha-error {
+  color: red; /* BSAC */
 }
 
 #mocha-stats {
@@ -242,7 +310,10 @@ body {
 }
 
 #mocha-stats em {
-  /* color: black; BSAC */
+  color: black;
+}
+
+.mocha-dark #mocha-stats em {
   color: yellow; /* BSAC */
 }
 
