wip Update README Features/Issues for mocha-dark on body
Change package.json test:dark, test:light targets much simpler.
mocha.js check for mocha-dark/light class on body tag if nothing in the cookie.

--- a/mocha.css
+++ b/mocha.css
@@ -198,7 +198,7 @@ body.mocha-dark {
 }
 
 .mocha-dark #mocha .test .html-error {
-  color: red; /* BSAC */
+  color: yellow; /* BSAC */
 }
 
 #mocha .test .html-error pre.error {
