--- a/mocha.css
+++ b/mocha.css
@@ -1,10 +1,11 @@
-/*  "version": "2.3.4", */
+/*  "version": "2.4.5", */
 @charset "utf-8";
 
 body {
   margin:0;
 }
 
+html.mocha-dark,
 body.mocha-dark {
   background: black; /* BSAC */
   color: yellow; /* BSAC */
@@ -198,7 +199,8 @@ body.mocha-dark {
 }
 
 .mocha-dark #mocha .test .html-error {
-  color: yellow; /* BSAC */
+  color: red; /* BSAC */
+/* TODO was 2.3.4   color: yellow; *//* BSAC */
 }
 
 #mocha .test .html-error pre.error {
@@ -237,6 +239,15 @@ body.mocha-dark {
   border-radius: 3px;
 }
 
+/* BSAC */
+/* any changes needed for dark ??? */
+.mocha-dark #mocha .test pre {
+  border: 1px solid #eee;
+  border-bottom-color: #ddd;
+  -webkit-box-shadow: 0 1px 3px #eee;
+  -moz-box-shadow: 0 1px 3px #eee;
+}
+
 #mocha .test h2 {
   position: relative;
 }
@@ -261,6 +272,11 @@ body.mocha-dark {
   transition: opacity 200ms;
   opacity: 0.3;
   color: #888;
+}
+
+.mocha-dark #mocha .test a.replay {
+  background: black; /* BSAC */
+  color: yellow; /* BSAC */
 }
 
 #mocha .test:hover a.replay {
@@ -304,6 +320,11 @@ body.mocha-dark {
   z-index: 1;
 }
 
+.mocha-dark #mocha-stats {
+  color: yellow; /* BSAC */
+}
+
+
 #mocha-stats .progress {
   float: right;
   padding-top: 0;
@@ -314,7 +335,16 @@ body.mocha-dark {
 }
 
 .mocha-dark #mocha-stats em {
-  color: yellow; /* BSAC */
+  color: white; /* BSAC */
+/* TODO was 2.3.4 color: yellow; */ /* BSAC */
+}
+
+.mocha-dark #mocha-stats .passes em {
+    color: green; /* BSAC */
+}
+
+.mocha-dark #mocha-stats .failures em {
+    color: red; /* BSAC */
 }
 
 #mocha-stats a {
@@ -324,6 +354,10 @@ body.mocha-dark {
 
 #mocha-stats a:hover {
   border-bottom: 1px solid #eee;
+}
+
+.mocha-dark #mocha-stats a:hover {
+  border-bottom: 1px solid yellow; /* BSAC */
 }
 
 #mocha-stats li {
@@ -343,6 +377,14 @@ body.mocha-dark {
 #mocha code .string { color: #5890ad; }
 #mocha code .keyword { color: #8a6343; }
 #mocha code .number { color: #2f6fad; }
+
+/* BSAC */
+/* any changes needed for dark ??? */
+.mocha-dark #mocha code .comment { color: #ddd; }
+.mocha-dark #mocha code .init { color: #2f6fad; }
+.mocha-dark #mocha code .string { color: #5890ad; }
+.mocha-dark #mocha code .keyword { color: #8a6343; }
+.mocha-dark #mocha code .number { color: #2f6fad; }
 
 @media screen and (max-device-width: 480px) {
   #mocha {
