--- a/mocha.css
+++ b/mocha.css
@@ -1,4 +1,4 @@
-/*  "version": "2.4.5", */
+/*  "version": "3.2.0", */
 @charset "utf-8";
 
 body {
@@ -9,11 +9,6 @@ html.mocha-dark,
 body.mocha-dark {
   background: black; /* BSAC */
   color: yellow; /* BSAC */
-}
-
-#mocha {
-  font: 20px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 60px 50px;
 }
 
 #mocha ul,
@@ -187,6 +182,8 @@ body.mocha-dark {
   padding: 15px;
   border: 1px solid #eee;
   max-width: 85%; /*(1)*/
+  max-width: -webkit-calc(100% - 42px);
+  max-width: -moz-calc(100% - 42px);
   max-width: calc(100% - 42px); /*(2)*/
   max-height: 300px;
   word-wrap: break-word;
@@ -196,6 +193,7 @@ body.mocha-dark {
   -moz-border-radius: 3px;
   -moz-box-shadow: 0 1px 3px #eee;
   border-radius: 3px;
+  box-shadow: 0 1px 3px #eee;
 }
 
 .mocha-dark #mocha .test .html-error {
@@ -204,10 +202,12 @@ body.mocha-dark {
 
 #mocha .test .html-error pre.error {
   border: none;
-  -webkit-border-radius: none;
-  -webkit-box-shadow: none;
-  -moz-border-radius: none;
-  -moz-box-shadow: none;
+  -webkit-border-radius: 0;
+  -webkit-box-shadow: 0;
+  -moz-border-radius: 0;
+  -moz-box-shadow: 0;
+  border-radius: 0;
+  box-shadow: 0;
   padding: 0;
   margin: 0;
   margin-top: 18px;
@@ -228,6 +228,8 @@ body.mocha-dark {
   padding: 15px;
   border: 1px solid #eee;
   max-width: 85%; /*(1)*/
+  max-width: -webkit-calc(100% - 42px);
+  max-width: -moz-calc(100% - 42px);
   max-width: calc(100% - 42px); /*(2)*/
   word-wrap: break-word;
   border-bottom-color: #ddd;
@@ -236,6 +238,7 @@ body.mocha-dark {
   -moz-border-radius: 3px;
   -moz-box-shadow: 0 1px 3px #eee;
   border-radius: 3px;
+  box-shadow: 0 1px 3px #eee;
 }
 
 /* BSAC */
@@ -264,17 +267,19 @@ body.mocha-dark {
   text-align: center;
   background: #eee;
   font-size: 15px;
+  -webkit-border-radius: 15px;
   -moz-border-radius: 15px;
   border-radius: 15px;
-  -webkit-transition: opacity 200ms;
-  -moz-transition: opacity 200ms;
+  -webkit-transition:opacity 200ms;
+  -moz-transition:opacity 200ms;
+  -o-transition:opacity 200ms;
   transition: opacity 200ms;
   opacity: 0.3;
   color: #888;
 }
 
 .mocha-dark #mocha .test a.replay {
-  background: black; /* BSAC */
+  background: #5e5e5e; /* BSAC */
   color: yellow; /* BSAC */
 }
 
@@ -327,6 +332,32 @@ body.mocha-dark {
 #mocha-stats .progress {
   float: right;
   padding-top: 0;
+
+  /**
+   * Set safe initial values, so mochas .progress does not inherit these
+   * properties from Bootstrap .progress (which causes .progress height to
+   * equal line height set in Bootstrap).
+   */
+  height: auto;
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
+  background-color: initial;
+  cursor: pointer; /* BSAC */
+  -webkit-transition: opacity 200ms; /* BSAC */
+  -moz-transition: opacity 200ms; /* BSAC */
+  -o-transition: opacity 200ms; /* BSAC */
+  transition: opacity 200ms; /* BSAC */
+  -webkit-transition: transform 200ms; /* BSAC */
+  -moz-transition: transform 200ms; /* BSAC */
+  -o-transition: transform 200ms; /* BSAC */
+  transition: transform 200ms; /* BSAC */
+  opacity: 1; /* BSAC */
+}
+
+#mocha-stats .progress:hover {
+  opacity: 0.75; /* BSAC */
+  transform: scale(1.2);
 }
 
 #mocha-stats em {
@@ -376,13 +407,11 @@ body.mocha-dark {
 #mocha code .keyword { color: #8a6343; }
 #mocha code .number { color: #2f6fad; }
 
-/* BSAC */
-/* any changes needed for dark ??? */
-.mocha-dark #mocha code .comment { color: #ddd; }
-.mocha-dark #mocha code .init { color: #2f6fad; }
-.mocha-dark #mocha code .string { color: #5890ad; }
-.mocha-dark #mocha code .keyword { color: #8a6343; }
-.mocha-dark #mocha code .number { color: #2f6fad; }
+.mocha-dark #mocha code .comment { color: #888; } /* BSAC */
+.mocha-dark #mocha code .init { color: #2f6fad; } /* BSAC */
+.mocha-dark #mocha code .string { color: #5890ad; } /* BSAC */
+.mocha-dark #mocha code .keyword { color: #8a6343; } /* BSAC */
+.mocha-dark #mocha code .number { color: #2f6fad; } /* BSAC */
 
 @media screen and (max-device-width: 480px) {
   #mocha {
