wip In mocha.* final changes for 8.3.0 features:
progress indicator renders when toggle/update color scheme.
progress indicator hover over animation and tooltip added.
mocha-dark homepage/icon set in the mocha.js code for badge icon.
CSS media query for prefers-color-scheme directly in the CSS.
removed all reference to cookies when saving/restoring color scheme.

--- a/mocha.css
+++ b/mocha.css
@@ -1,19 +1,33 @@
 /*  "version": "3.2.0", */
 @charset "utf-8";
 
+/*
+  LIGHT/DARK SCHEM
+
+  I have marked every line which varies based on color scheme with a
+  comment.  This should aid in maintaining the Light/Dark color scheme
+  and to allow end users to customise it to their liking.
+
+  You can also find every line which may have a bearing on the color
+  scheme with this command:
+
+  grep -E 'color|background|opacity|border|shadow' *.css \
+  | egrep -v '(border-radius|prefers-color-scheme|transition:)'
+*/
+
 body {
   margin:0;
+}
+
+html.mocha-dark,
+body.mocha-dark {
+  background: black; /* DARK SCHEME */
+  color: yellow; /* DARK SCHEME */
 }
 
 #mocha {
   font: 20px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 60px 50px;
-}
-
-html.mocha-dark,
-body.mocha-dark {
-  background: black; /* BSAC */
-  color: yellow; /* BSAC */
 }
 
 #mocha ul,
@@ -37,9 +51,22 @@ body.mocha-dark {
   font-weight: 200;
 }
 
+.mocha-dark a {
+  color: rgb(0,0,238); /* DARK SCHEME */
+}
+
+.mocha-dark a:visited {
+  color: rgb(0,0,215); /* DARK SCHEME */
+}
+
 #mocha h1 a {
   text-decoration: none;
   color: inherit;
+}
+
+.mocha-dark #mocha h1 a,
+.mocha-dark #mocha h1 a:visited {
+  color: yellow; /* DARK SCHEME */
 }
 
 #mocha h1 a:hover {
@@ -76,11 +103,11 @@ body.mocha-dark {
 }
 
 #mocha .test.pass.medium .duration {
-  background: #c09853;
+  background: #c09853; /* LIGHT SCHEME */
 }
 
 #mocha .test.pass.slow .duration {
-  background: #b94a48;
+  background: #b94a48; /* LIGHT SCHEME */
 }
 
 #mocha .test.pass::before {
@@ -89,21 +116,21 @@ body.mocha-dark {
   display: block;
   float: left;
   margin-right: 5px;
-  color: #00d6b2;
+  color: #00d6b2; /* LIGHT SCHEME */
 }
 
 .mocha-dark #mocha .test.pass::before {
-  color: green; /* BSAC */
+  color: green; /* DARK SCHEME */
 }
 
 #mocha .test.pass .duration {
   font-size: 9px;
   margin-left: 5px;
   padding: 2px 5px;
-  color: #fff;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.2);
-  -moz-box-shadow: inset 0 1px 1px rgba(0,0,0,.2);
-  box-shadow: inset 0 1px 1px rgba(0,0,0,.2);
+  color: #fff; /* LIGHT SCHEME */
+  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.2); /* LIGHT SCHEME */
+  -moz-box-shadow: inset 0 1px 1px rgba(0,0,0,.2); /* LIGHT SCHEME */
+  box-shadow: inset 0 1px 1px rgba(0,0,0,.2); /* LIGHT SCHEME */
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   -ms-border-radius: 5px;
@@ -112,7 +139,7 @@ body.mocha-dark {
 }
 
 .mocha-dark #mocha .test.pass .duration {
-  color: purple; /* BSAC */
+  color: purple; /* DARK SCHEME */
 }
 
 #mocha .test.pass.fast .duration {
@@ -120,36 +147,25 @@ body.mocha-dark {
 }
 
 #mocha .test.pending {
-  color: #0b97c4;
-}
-
-.mocha-dark #mocha .test.pending {
-  color: cyan; /* BSAC */
+  color: #0b97c4; /* LIGHT SCHEME */
 }
 
 #mocha .test.pending::before {
   content: '◦';
-  color: #0b97c4;
+  color: #0b97c4; /* LIGHT SCHEME */
 }
 
+.mocha-dark #mocha .test.pending,
 .mocha-dark #mocha .test.pending::before {
-  color: cyan; /* BSAC */
+  color: cyan; /* DARK SCHEME */
 }
 
 #mocha .test.fail {
-  color: #c00;
-}
-
-.mocha-dark #mocha .test.fail {
-  color: red; /* BSAC */
+  color: #c00; /* LIGHT SCHEME */
 }
 
 #mocha .test.fail pre {
-  color: black;
-}
-
-.mocha-dark #mocha .test.fail pre {
-  color: red; /* BSAC */
+  color: black; /* LIGHT SCHEME */
 }
 
 #mocha .test.fail::before {
@@ -158,50 +174,49 @@ body.mocha-dark {
   display: block;
   float: left;
   margin-right: 5px;
-  color: #c00;
-}
-
-.mocha-dark #mocha .test.fail::before {
-  color: red; /* BSAC */
+  color: #c00; /* LIGHT SCHEME */
 }
 
 #mocha .test pre.error {
-  color: #c00;
+  color: #c00; /* LIGHT SCHEME */
   max-height: 300px;
   overflow: auto;
 }
 
-.mocha-dark #mocha .test pre.error {
-  color: red; /* BSAC */
-}
-
 #mocha .test .html-error {
   overflow: auto;
-  color: black;
+  color: black; /* LIGHT SCHEME */
   display: block;
   float: left;
   clear: left;
   font: 12px/1.5 monaco, monospace;
   margin: 5px;
   padding: 15px;
-  border: 1px solid #eee;
+  border: 1px solid #eee; /* LIGHT SCHEME */
   max-width: 85%; /*(1)*/
   max-width: -webkit-calc(100% - 42px);
   max-width: -moz-calc(100% - 42px);
   max-width: calc(100% - 42px); /*(2)*/
   max-height: 300px;
   word-wrap: break-word;
-  border-bottom-color: #ddd;
-  -webkit-box-shadow: 0 1px 3px #eee;
-  -moz-box-shadow: 0 1px 3px #eee;
-  box-shadow: 0 1px 3px #eee;
+  border-bottom-color: #ddd; /* LIGHT SCHEME */
+  -webkit-box-shadow: 0 1px 3px #eee; /* LIGHT SCHEME */
+  -moz-box-shadow: 0 1px 3px #eee; /* LIGHT SCHEME */
+  box-shadow: 0 1px 3px #eee; /* LIGHT SCHEME */
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
   border-radius: 3px;
 }
 
+.mocha-dark #mocha .test.fail,
+.mocha-dark #mocha .test.fail::before,
+.mocha-dark #mocha .test pre.error {
+  color: red !important; /* DARK SCHEME */
+}
+
+.mocha-dark #mocha .test.fail pre,
 .mocha-dark #mocha .test .html-error {
-  color: yellow; /* BSAC */
+  color: yellow; /* DARK SCHEME */
 }
 
 #mocha .test .html-error pre.error {
@@ -230,28 +245,27 @@ body.mocha-dark {
   font: 12px/1.5 monaco, monospace;
   margin: 5px;
   padding: 15px;
-  border: 1px solid #eee;
+  border: 1px solid #eee; /* LIGHT SCHEME */
   max-width: 85%; /*(1)*/
   max-width: -webkit-calc(100% - 42px);
   max-width: -moz-calc(100% - 42px);
   max-width: calc(100% - 42px); /*(2)*/
   word-wrap: break-word;
-  border-bottom-color: #ddd;
-  -webkit-box-shadow: 0 1px 3px #eee;
-  -moz-box-shadow: 0 1px 3px #eee;
-  box-shadow: 0 1px 3px #eee;
+  border-bottom-color: #ddd; /* LIGHT SCHEME */
+  -webkit-box-shadow: 0 1px 3px #eee; /* LIGHT SCHEME */
+  -moz-box-shadow: 0 1px 3px #eee; /* LIGHT SCHEME */
+  box-shadow: 0 1px 3px #eee; /* LIGHT SCHEME */
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
   border-radius: 3px;
 }
 
-/* BSAC */
-/* any changes needed for dark ??? */
 .mocha-dark #mocha .test pre {
-  border: 1px solid #eee;
-  border-bottom-color: #ddd;
-  -webkit-box-shadow: 0 1px 3px #eee;
-  -moz-box-shadow: 0 1px 3px #eee;
+  border: 1px solid #eee; /* DARK SCHEME */
+  border-bottom-color: #ddd;/* DARK SCHEME */
+  -webkit-box-shadow: 0 1px 3px #eee;/* DARK SCHEME */
+  -moz-box-shadow: 0 1px 3px #eee;/* DARK SCHEME */
+  box-shadow: 0 1px 3px #eee;/* DARK SCHEME */
 }
 
 #mocha .test h2 {
@@ -269,7 +283,7 @@ body.mocha-dark {
   height: 15px;
   line-height: 15px;
   text-align: center;
-  background: #eee;
+  background: #eee; /* LIGHT SCHEME */
   font-size: 15px;
   -webkit-border-radius: 15px;
   -moz-border-radius: 15px;
@@ -278,13 +292,13 @@ body.mocha-dark {
   -moz-transition:opacity 200ms;
   -o-transition:opacity 200ms;
   transition: opacity 200ms;
-  opacity: 0.3;
-  color: #888;
+  opacity: 0.3; /* LIGHT SCHEME */
+  color: #888; /* LIGHT SCHEME */
 }
 
 .mocha-dark #mocha .test a.replay {
-  background: #5e5e5e; /* BSAC */
-  color: yellow; /* BSAC */
+  background: #5e5e5e; /* DARK SCHEME */
+  color: yellow; /* DARK SCHEME */
 }
 
 #mocha .test:hover a.replay {
@@ -308,14 +322,14 @@ body.mocha-dark {
 }
 
 #mocha-error {
-  color: #c00;
+  color: #c00; /* LIGHT SCHEME */
   font-size: 1.5em;
   font-weight: 100;
   letter-spacing: 1px;
 }
 
 .mocha-dark #mocha-error {
-  color: red; /* BSAC */
+  color: red; /* DARK SCHEME */
 }
 
 #mocha-stats {
@@ -324,12 +338,12 @@ body.mocha-dark {
   right: 10px;
   font-size: 12px;
   margin: 0;
-  color: #888;
+  color: #888; /* LIGHT SCHEME */
   z-index: 1;
 }
 
 .mocha-dark #mocha-stats {
-  color: yellow; /* BSAC */
+  color: yellow; /* DARK SCHEME */
 }
 
 
@@ -346,40 +360,40 @@ body.mocha-dark {
   -webkit-box-shadow: none;
   -moz-box-shadow: none;
   box-shadow: none;
-  background-color: initial;
+  background-color: initial; /* LIGHT SCHEME */
 
-  /* BSAC change color scheme button */
-  cursor: pointer; /* BSAC */
-  -webkit-transition: opacity 200ms; /* BSAC */
-  -moz-transition: opacity 200ms; /* BSAC */
-  -o-transition: opacity 200ms; /* BSAC */
-  transition: opacity 200ms; /* BSAC */
-  -webkit-transition: transform 200ms; /* BSAC */
-  -moz-transition: transform 200ms; /* BSAC */
-  -o-transition: transform 200ms; /* BSAC */
-  transition: transform 200ms; /* BSAC */
-  opacity: 1; /* BSAC */
+  /* change color scheme button */
+  cursor: pointer; /* LIGHT/DARK SCHEME */
+  -webkit-transition: opacity 200ms; /* LIGHT/DARK SCHEME */
+  -moz-transition: opacity 200ms; /* LIGHT/DARK SCHEME */
+  -o-transition: opacity 200ms; /* LIGHT/DARK SCHEME */
+  transition: opacity 200ms; /* LIGHT/DARK SCHEME */
+  -webkit-transition: transform 200ms; /* LIGHT/DARK SCHEME */
+  -moz-transition: transform 200ms; /* LIGHT/DARK SCHEME */
+  -o-transition: transform 200ms; /* LIGHT/DARK SCHEME */
+  transition: transform 200ms; /* LIGHT/DARK SCHEME */
+  opacity: 1; /* LIGHT/DARK SCHEME */
 }
 
 #mocha-stats .progress:hover {
-  opacity: 0.75; /* BSAC */
+  opacity: 0.75; /* DARK SCHEME */
   transform: scale(1.2);
 }
 
 #mocha-stats em {
-  color: black;
+  color: black; /* LIGHT SCHEME */
 }
 
 .mocha-dark #mocha-stats em {
-  color: white; /* BSAC */
+  color: white; /* DARK SCHEME */
 }
 
 .mocha-dark #mocha-stats .passes em {
-  color: green; /* BSAC */
+  color: green; /* DARK SCHEME */
 }
 
 .mocha-dark #mocha-stats .failures em {
-  color: red; /* BSAC */
+    color: red; /* DARK SCHEME */
 }
 
 #mocha-stats a {
@@ -388,11 +402,11 @@ body.mocha-dark {
 }
 
 #mocha-stats a:hover {
-  border-bottom: 1px solid #eee;
+  border-bottom: 1px solid #eee; /* LIGHT SCHEME */
 }
 
 .mocha-dark #mocha-stats a:hover {
-  border-bottom: 1px solid yellow; /* BSAC */
+  border-bottom: 1px solid yellow; /* DARK SCHEME */
 }
 
 #mocha-stats li {
@@ -407,17 +421,17 @@ body.mocha-dark {
   height: 40px;
 }
 
-#mocha code .comment { color: #ddd; }
-#mocha code .init { color: #2f6fad; }
-#mocha code .string { color: #5890ad; }
-#mocha code .keyword { color: #8a6343; }
-#mocha code .number { color: #2f6fad; }
+#mocha code .comment { color: #ddd;  /* LIGHT SCHEME */ }
+#mocha code .init { color: #2f6fad;  /* LIGHT SCHEME */ }
+#mocha code .string { color: #5890ad;  /* LIGHT SCHEME */ }
+#mocha code .keyword { color: #8a6343;  /* LIGHT SCHEME */ }
+#mocha code .number { color: #2f6fad;  /* LIGHT SCHEME */ }
 
-.mocha-dark #mocha code .comment { color: #888; } /* BSAC */
-.mocha-dark #mocha code .init { color: #2f6fad; } /* BSAC */
-.mocha-dark #mocha code .string { color: #5890ad; } /* BSAC */
-.mocha-dark #mocha code .keyword { color: #8a6343; } /* BSAC */
-.mocha-dark #mocha code .number { color: #2f6fad; } /* BSAC */
+.mocha-dark #mocha code .comment { color: #888; } /* DARK SCHEME */
+.mocha-dark #mocha code .init { color: #2f6fad; /* DARK SCHEME */}
+.mocha-dark #mocha code .string { color: #5890ad; /* DARK SCHEME */}
+.mocha-dark #mocha code .keyword { color: #8a6343; /* DARK SCHEME */}
+.mocha-dark #mocha code .number { color: #2f6fad; /* DARK SCHEME */}
 
 @media screen and (max-device-width: 480px) {
   #mocha {
@@ -428,3 +442,101 @@ body.mocha-dark {
     position: absolute;
   }
 }
+
+/* DARK SCHEME */
+@media (prefers-color-scheme: dark) {
+/*
+Note: you can quickly check the light/dark color scheme change by
+enabling the line below and resizing the window.
+You must clear the scheme in storage with mocha.updateColorScheme()
+@media (orientation: landscape) {
+*/
+
+html,
+body {
+  background: black; /* DARK SCHEME */
+  color: yellow; /* DARK SCHEME */
+}
+
+a {
+  color: rgb(0,0,238); /* DARK SCHEME */
+}
+
+a:visited {
+  color: rgb(0,0,215); /* DARK SCHEME */
+}
+
+#mocha h1 a,
+#mocha h1 a:visited {
+  color: yellow; /* DARK SCHEME */
+}
+
+#mocha .test.pass::before {
+  color: green; /* DARK SCHEME */
+}
+
+#mocha .test.pass .duration {
+  color: purple; /* DARK SCHEME */
+}
+
+#mocha .test.pending,
+#mocha .test.pending::before {
+  color: cyan; /* DARK SCHEME */
+}
+
+#mocha .test.fail,
+#mocha .test.fail::before,
+#mocha .test pre.error {
+  color: red !important; /* DARK SCHEME */
+}
+
+#mocha .test.fail pre,
+#mocha .test .html-error {
+  color: yellow; /* DARK SCHEME */
+}
+
+#mocha .test pre {
+  border: 1px solid #eee; /* DARK SCHEME */
+  border-bottom-color: #ddd;/* DARK SCHEME */
+  -webkit-box-shadow: 0 1px 3px #eee;/* DARK SCHEME */
+  -moz-box-shadow: 0 1px 3px #eee;/* DARK SCHEME */
+  box-shadow: 0 1px 3px #eee;/* DARK SCHEME */
+}
+
+#mocha .test a.replay {
+  background: black; /* DARK SCHEME */
+  color: yellow; /* DARK SCHEME */
+}
+
+#mocha-error {
+  color: red; /* DARK SCHEME */
+}
+
+#mocha-stats {
+  color: yellow; /* DARK SCHEME */
+}
+
+#mocha-stats em {
+  color: white; /* DARK SCHEME */
+}
+
+#mocha-stats .passes em {
+    color: green; /* DARK SCHEME */
+}
+
+#mocha-stats .failures em {
+    color: red; /* DARK SCHEME */
+}
+
+#mocha-stats a:hover {
+  border-bottom: 1px solid yellow; /* DARK SCHEME */
+}
+
+#mocha code .comment { color: #888; /* DARK SCHEME */}
+#mocha code .init { color: #2f6fad; /* DARK SCHEME */}
+#mocha code .string { color: #5890ad; /* DARK SCHEME */}
+#mocha code .keyword { color: #8a6343; /* DARK SCHEME */}
+#mocha code .number { color: #2f6fad; /* DARK SCHEME */}
+
+}
+
